[package]
name = "halo2-vitalik"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#halo2_proofs = "0.1.0"
halo2_proofs = { version = "0.1.0", features = ["dev-graph"] }

group = "0.13"
rand = "0.8.3"
plotters = "0.3.4"